
dnl --------------------------------
dnl Initialization macros.
dnl --------------------------------
AC_INIT(librf/librf.h)
AM_INIT_AUTOMAKE(librf,0.1)
AM_CONFIG_HEADER(config.h)
AC_PROG_CC
AC_PROG_CXX
AC_PROG_RANLIB
AC_OUTPUT(Makefile \
          librf/Makefile \
          tests/Makefile \
          examples/Makefile
)

